<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3B00C853"
    tools:context=".MainActivity">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/title_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/curved_toolbar"
        android:elevation="4dp"
        android:gravity="center"
        android:padding="5dp">

        <ImageView
            android:layout_width="54dp"
            android:layout_height="54dp"
            android:layout_gravity="start"
            android:contentDescription="@string/icon"
            android:src="@drawable/naturopathy" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/med_hub"
            android:textSize="32sp"
            android:textStyle="bold">

        </TextView>


    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:id="@+id/layout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_toolbar"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/medidicinal_herb_detection"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="15dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0.75"
            android:text="@string/about"
            android:textAlignment="center"
            android:textColor="@color/black" />
    </LinearLayout>

    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout1"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:textAlignment="center"
        android:textSize="30sp"
        tools:text="Prediction" />

    <Button
        android:id="@+id/check_usecase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/result"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="10dp"
        android:backgroundTint="#85005E27"
        android:text="@string/use_cases" />


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="-30dp"
        android:elevation="4dp"
        app:cardCornerRadius="36dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/card_back"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp">

            <ImageView
                android:id="@+id/upload_image"
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:layout_margin="20dp"
                android:contentDescription="@string/holder"
                android:scaleType="fitXY"
                android:src="@drawable/upload_img" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/upload_from_camera"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:backgroundTint="#4B00C853"
                    android:text="@string/upload_camera" />

                <Button
                    android:id="@+id/upload_from_gallery"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:backgroundTint="#5E2B2B2B"
                    android:text="@string/upload_gallery" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="50dp" />
        </LinearLayout>


    </androidx.cardview.widget.CardView>


</RelativeLayout>